@@ -81,6 +81,11 @@ Release 0.22b.dev (unpublished)
 
   - `Messages` also handles "loose" system messages generated by the parser.
 
+* docutils/utils/__init__.py
+
+  - Removed `Reporter.set_conditions()`.
+    Set attributes via configuration settings or directly.
+
 * docutils/utils/error_reporting.py
 
   - Removed. Obsolete in Python 3.
